fix z-index conflict between newsletter appeal and audio player

--- a/app/assets/stylesheets/new/_newsletter_appeals.css.scss
+++ b/app/assets/stylesheets/new/_newsletter_appeals.css.scss
@@ -49,7 +49,6 @@
     padding: 60px 0;
     position:relative;
     text-align: center;
-    z-index:300;
 
     @media (max-width: 562px) {
         margin-left: 0;
